[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://Textures/OnePixel.png" type="Texture" id=2]

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.168627, 0.168627, 0.168627, 1 )

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_top = 150.0
margin_bottom = 114.0
text = "Straci≈Çlas przytomnosc"
align = 1

[node name="RestartLeftTimer" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 20.0
margin_bottom = 34.0
text = "29"
align = 1

[node name="LeftTimeBar" type="TextureProgress" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = 50.0
margin_right = 0.5
margin_bottom = 0.5
rect_scale = Vector2( 700, 4 )
rect_pivot_offset = Vector2( 0.5, 0.5 )
step = 0.001
value = 100.0
texture_progress = ExtResource( 2 )

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
